<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BabyApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="txt_email">E-mail address</string>
    <string name="txt_password">Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="str_save">Save</string>
    <string name="str_cancel">Cancel</string>
    <string name="create_account">Create Account</string>
    <string name="account_signup">Don\'t have account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_email_to_reset">Enter your email address to reset your password</string>
    
    <string name="baby_booklet">Baby Booklet</string>
    <string name="new_immunisation">New Immunisation</string>
    <string name="new_screening">New Screening</string>
    <string name="my_immunisation">My Immunisation</string>
    <string name="my_screenings">My Screenings</string>
    <string name="my_growth_percentiles">My Growth Percentiles</string>
    <string name="health_book">Health Book</string>
    <string name="encyclopedia">Encyclopedia</string>
    <string name="sign_out">Sign Out</string>
    
    <string name="add_bio">Add Bio</string>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    
</resources>
