<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/needle_icon"
            android:title="@string/baby_booklet"/>
        <item
            android:id="@+id/nav_new_immunisation"
            android:icon="@drawable/needle_icon"
            android:title="@string/new_immunisation"/>
        <item
            android:id="@+id/nav_new_screening"
            android:icon="@drawable/needle_icon"
            android:title="@string/new_screening"/>
    </group>
    <item android:title="MAIN MENU">
        <menu>
		    <group android:checkableBehavior="single">
		        <item
		            android:id="@+id/nav_my_immunisation"
		            android:icon="@drawable/ic_favorite_on"
		            android:title="@string/my_immunisation"/>
		        <item
		            android:id="@+id/nav_my_screenings"
		            android:icon="@drawable/ic_favorite_on"
		            android:title="@string/my_screenings"/>
		        <item
		            android:id="@+id/nav_my_growth_percentiles"
		            android:icon="@drawable/ic_favorite_on"
		            android:title="@string/my_growth_percentiles"/>
		        <item
		            android:id="@+id/nav_health_book"
		            android:icon="@drawable/ic_favorite_on"
		            android:title="@string/health_book"/>
		        <item
		            android:id="@+id/nav_encyclopedia"
		            android:icon="@drawable/ic_favorite_on"
		            android:title="@string/encyclopedia"/>
		    </group>
    	</menu>
    </item>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
	            <item
	                android:id="@+id/nav_settings"
	                android:icon="@drawable/settings_icon"
	                android:title="@string/action_settings"/>
	            <item
	                android:id="@+id/nav_sign_out"
	                android:icon="@drawable/sign_out_icon"
	                android:title="@string/sign_out"/>
            </group>
        </menu>
    </item>

</menu>
