<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <com.main.java.babyapp.customviews.CustomTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:padding="10dp" />

    <com.main.java.babyapp.customviews.CustomTextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:text="@string/enter_email_to_reset"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/black"
        android:padding="10dp" />
    
    <com.main.java.babyapp.customviews.CustomEditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content" 
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="4dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="@drawable/stroke_button"
        android:hint="Email address">
        <requestFocus />
    </com.main.java.babyapp.customviews.CustomEditText>
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
		android:background="@color/grey_300"/>
    <LinearLayout
	    style="?android:attr/buttonBarStyle"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:measureWithLargestChild="true"
	    android:orientation="horizontal"
	    android:paddingTop="0dip" >
		
        <com.main.java.babyapp.customviews.CustomButton
	        android:id="@+id/btn_cancel"
	        style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/str_cancel"
	        android:textColor="@color/grey_600" />
        
        <View 
	        android:layout_width="1dp"
	        android:layout_height="fill_parent"
			android:background="@color/grey_300"/>
	    <com.main.java.babyapp.customviews.CustomButton
	        android:id="@+id/btn_save"
	        style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text= "@string/str_save"
	        android:textColor="@color/grey_600" />
	
	</LinearLayout>

</LinearLayout>